# airline-customer-support-agent

./: .gitignore  .relaiignore  README.md  pyproject.toml  start.sh
.relai/: learning-env-context.json  mock-manifest.json  runtime-manifest.json  simulator.env.example  tags.json
.relai/benchmarks/: airline-support-suite.py
.relai/evaluators/: response-token.py
.relai/learning-envs/: response-signoff.py
.relai/simulator/: .gitignore  SDK_REFERENCE.md  check.sh  install.sh  pyproject.toml  smoke_learning_env.py
.relai/simulator/src/relai_simulator/: adapter.py  runner.py
.relai/simulator/src/relai_simulator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/airline_support/: __init__.py  agent.py  main.py  models.py  sessions.py  walkthrough.py
tests/: test_cli.py  test_models.py  test_walkthrough.py
web/: components.json  package-lock.json  package.json  tsconfig.json
web/app/: layout.tsx  page.tsx  styles.css
web/components/: command-block.tsx  setup-gate.tsx  theme-toggle.tsx  tour.tsx
web/components/ui/: badge.tsx  button.tsx  select.tsx  sonner.tsx  tabs.tsx  tooltip.tsx
