[project]
name = "relai-airline-support-agent"
version = "0.1.0"
description = "Terminal airline customer support agent for RELAI learning loops."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai-agents>=0.3.0",
  "python-dotenv>=1.0.1",
]

[project.scripts]
airline-support = "airline_support.main:run"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/airline_support"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
